removed top container of about photo and tried fixing side scroll on smaller phones

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -909,8 +909,8 @@ footer {
 .card-photo {
 /* clear and add new css */
   transform: scale(0.3) translate(220px, 230px);
-  max-width: 400px;
-  max-height: 400px;
+  max-width: 365px;
+  max-height: 365px;
   position: absolute;
   margin-left: -128px;
   margin-top: -250px;
